force-app/main/default/objects/ApprovalProcessControl__c/ApprovalProcessControl__c.object-meta.xml
<CustomObject>
    <label>Control de aprobación</label>
    <nameField>
        <displayFormat>APC-{0000000}</displayFormat>
        <label>Serial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controles de aprobación</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>