force-app/main/default/objects/ApprovalProcessControl__c/fields/ApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcess__c</fullName>
    <label>Proceso de aprobación</label>
    <referenceTo>ApprovalProcess__c</referenceTo>
    <relationshipLabel>Controles de aprobación</relationshipLabel>
    <relationshipName>ApprovalProcessControls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>