force-app/main/default/objects/ApprovalProcessControl__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expediente de proyecto</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Controles de aprobación</relationshipLabel>
    <relationshipName>ApprovalProcessControls</relationshipName>
    <type>Lookup</type>
</CustomField>