force-app/main/default/objects/ApprovalProcessControl__c/fields/OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de oportunidad</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Controles de aprobación</relationshipLabel>
    <relationshipName>ApprovalProcessControls</relationshipName>
    <type>Lookup</type>
</CustomField>