force-app/main/default/objects/ApprovalProcessControl__c/fields/RGU__c.field-meta.xml
<CustomField>
    <fullName>RGU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referencia Elara</label>
    <referenceTo>RGU__c</referenceTo>
    <relationshipLabel>Controles de aprobación</relationshipLabel>
    <relationshipName>ApprovalProcessControls</relationshipName>
    <type>Lookup</type>
</CustomField>