force-app/main/default/objects/ApprovalProcessControl__c/fields/TipoDeSitio__c.field-meta.xml
<CustomField>
    <fullName>TipoDeSitio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de sitio</label>
    <referenceTo>TipoDeSitio__c</referenceTo>
    <relationshipLabel>Controles de aprobación</relationshipLabel>
    <relationshipName>ApprovalProcessControls</relationshipName>
    <type>Lookup</type>
</CustomField>