force-app/main/default/objects/ApprovalProcessControl__c/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>true</active>
    <description>Tipo de registro principal para controles de aprobación relacionados a expediente de proyecto.</description>
    <label>Expediente de proyecto</label>
</RecordType>