force-app/main/default/objects/ApprovalProcessControl__c/recordTypes/RGU.recordType-meta.xml
<RecordType>
    <fullName>RGU</fullName>
    <active>true</active>
    <description>Tipo de registro para controles de aprobación relacionados a referencias elara.</description>
    <label>Referencia Elara</label>
</RecordType>